--- a/gordonramsay/index.html
+++ b/gordonramsay/index.html
@@ -174,7 +174,7 @@
     <p class="fs-5 col-md-8">Played Aussie football for St Kilda</p>
 
     <div class="mb-5">
-      <a href="../examples/" class="btn btn-primary btn-lg px-4">Download examples</a>
+      <a href="../examples/" class="btn btn-primary btn-lg px-4">Testing</a>
     </div>
 
     <hr class="col-3 col-md-2 mb-5">
